--- a/README
+++ b/README
@@ -1,3 +1,14 @@
+Cycle Philly, 2013 Code for Philly
+-----------
+Philadelphia, PA. USA
+
+ Contact: Corey Acri <acri.corey@gmail.com>
+             Lloyd Emelle <lemelle@codeforamerica.org>
+
+Updated/Modified for Philadelphia's app deployment. Based on the
+CycleTracks codebase for SFCTA.
+
+
 CycleTracks
 -----------
 Copyright 2009, 2010 San Francisco County Transportation Authority
